; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_hda_codec.c_init_hda_cache.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_hda_codec.c_init_hda_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hda_cache_rec = type { i32, %struct.hda_cache_rec* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hda_cache_rec*, i32)* @init_hda_cache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_hda_cache(%struct.hda_cache_rec* %0, i32 %1) #0 {
  %3 = alloca %struct.hda_cache_rec*, align 8
  %4 = alloca i32, align 4
  store %struct.hda_cache_rec* %0, %struct.hda_cache_rec** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.hda_cache_rec*, %struct.hda_cache_rec** %3, align 8
  %6 = call i32 @memset(%struct.hda_cache_rec* %5, i32 0, i32 16)
  %7 = load %struct.hda_cache_rec*, %struct.hda_cache_rec** %3, align 8
  %8 = getelementptr inbounds %struct.hda_cache_rec, %struct.hda_cache_rec* %7, i32 0, i32 1
  %9 = load %struct.hda_cache_rec*, %struct.hda_cache_rec** %8, align 8
  %10 = call i32 @memset(%struct.hda_cache_rec* %9, i32 255, i32 8)
  %11 = load %struct.hda_cache_rec*, %struct.hda_cache_rec** %3, align 8
  %12 = getelementptr inbounds %struct.hda_cache_rec, %struct.hda_cache_rec* %11, i32 0, i32 0
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @snd_array_init(i32* %12, i32 %13, i32 64)
  ret void
}

declare dso_local i32 @memset(%struct.hda_cache_rec*, i32, i32) #1

declare dso_local i32 @snd_array_init(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
